# CourseWork_4---parser_vacancies

./: .gitignore  README.md  constant.py  main.py  pyproject.toml  requirements.txt
src/: utils.py
src/classes/: get_data.py  parser.py  parser_hh.py  parser_sj.py  parser_vacancy_hh.py  parser_vacancy_sj.py  saver.py  saverreader.py  vacancy.py
tests/: test_parser.py  test_pytest_get_data.py  test_pytest_mixin.py  test_pytest_parser_hh.py  test_pytest_parser_sj.py  test_pytest_vacancy.py
