[tool.poetry]
name = "project-vacancy-parser"
version = "0.1.0"
description = ""
authors = ["Valera K <vk1337atliberty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
